refactor: Java 17
Use this link to re-run the recipe: https://app.moderne.io/builder/Sc5Oq85hw?organizationId=MWZkNWMwNTgtZDgyZi00YTFjLWE1OTEtMWUxMWE2MTNjMDgw

Co-authored-by: Moderne <team@moderne.io>