@@ -27,7 +27,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -46,7 +45,7 @@ public class OperatonBpmRunDeploymentConfiguration extends DefaultDeploymentConf
   @Override
   public Set<Resource> getDeploymentResources() {
     if (!StringUtils.isEmpty(deploymentDir)) {
-      Path resourceDir = Paths.get(deploymentDir);
+      Path resourceDir = Path.of(deploymentDir);
 
       try (Stream<Path> stream = Files.walk(resourceDir)) {
         return stream.filter(file -> !Files.isDirectory(file)).map(FileSystemResource::new).collect(Collectors.toSet());
